--- a/src/lang/messages.properties
+++ b/src/lang/messages.properties
@@ -103,7 +103,7 @@ bot.butcher.title=Butcher
 bot.butcher.desc=The bot is butchering animal carcasses. You need to specify a zone with specialisation 'deadkritter' for carcasses, and an area with specialisation 'rawhides' for fresh skins. All other ingredients are distributed by the area system ('Put' section).
 
 bot.cheese.title=Process Cheese Orders
-bot.cheese.desc=This bot is designed to create, move, and slice cheese from racks based on orders defined in Cheese Orders. To use it, first create one or more orders in Nurgling Settings → Bots → Cheese Orders. You will need TAKE areas for each curd type, a PUT/TAKE area for empty trays, a PUT area for sliced cheese outputs, and cheese rack areas for each location (outside, inside, mine, cellar), each with buffer cupboards or chests. The bot will collect ready cheese into buffers, slice cheese from buffers, move cheese between areas according to your orders, and finally create new trays if space, empty trays, curds, and orders allow. Global PF is supported.
+bot.cheese.desc=This bot is designed to create, move, and slice cheese from racks based on orders defined in Cheese Orders. To use it, first create one or more orders in Nurgling Settings в†’ Bots в†’ Cheese Orders. You will need TAKE areas for each curd type, a PUT/TAKE area for empty trays, a PUT area for sliced cheese outputs, and cheese rack areas for each location (outside, inside, mine, cellar), each with buffer cupboards or chests. The bot will collect ready cheese into buffers, slice cheese from buffers, move cheese between areas according to your orders, and finally create new trays if space, empty trays, curds, and orders allow. Global PF is supported.
 
 bot.cheese_empty.title=Unload curds
 bot.cheese_empty.desc=This bot takes curds from curding tubs to containers in an area with curds in PUT. Global PF is supported.
@@ -142,7 +142,7 @@ bot.lye.title=Lye Boiler
 bot.lye.desc=This bot boils lye from ashes using cauldrons. You need an area with 'boiler' specialization for cauldrons and 'water' specialization for water source. You also need an IN area for 'Ashes'. The bot will fill cauldrons with ashes and water, add branch fuel, light them, wait for boiling to complete, and collect lye. It will continue automatically until no more ashes are available.
 
 bot.pickle.title=Pickling Bot
-bot.pickle.desc=This bot automates the pickling process for vegetables, eggs, and fish. It handles filling jars with fresh items, adding brine when needed, and extracting finished pickled goods. You will need areas with 'picklingJars' specialization and sub-specializations for each item type (Beetroots, Carrots, Eggs, Herring, Olives, Cucumbers, Red Onion, Yellow Onion). You also need barrel areas with 'Pickling Brine' specialization for brine refilling. You also need an area with ready products in PUT section. The bot works in three phases: filling empty jars with fresh vegetables, refilling brine on filled jars, and extracting completed pickled items. Configure which items to process in Nurgling Settings → Bots → Pickling Settings. The bot will only process enabled items that have corresponding areas defined. Global PF is supported.
+bot.pickle.desc=This bot automates the pickling process for vegetables, eggs, and fish. It handles filling jars with fresh items, adding brine when needed, and extracting finished pickled goods. You will need areas with 'picklingJars' specialization and sub-specializations for each item type (Beetroots, Carrots, Eggs, Herring, Olives, Cucumbers, Red Onion, Yellow Onion). You also need barrel areas with 'Pickling Brine' specialization for brine refilling. You also need an area with ready products in PUT section. The bot works in three phases: filling empty jars with fresh vegetables, refilling brine on filled jars, and extracting completed pickled items. Configure which items to process in Nurgling Settings в†’ Bots в†’ Pickling Settings. The bot will only process enabled items that have corresponding areas defined. Global PF is supported.
 
 bot.silkworm_cocoon.title=Silkworm Cocoon Production
 bot.silkworm_cocoon.desc=Handles full silkworm cocoon cycle; requires areas: mulberry leaf (take), silkworm eggs (take & put), silkworm cocoons (take & put), herbalist table (silkworm eggs), silkmoth breeding, and silkworm feeding; moves hatched cocoons (max 16/cupboard), stores extras, refills leaves (max 32/cupboard), fills feeders from herbalist tables, places eggs, and pairs moths; safe to run anytime if all areas are defined and reachable.
@@ -361,7 +361,7 @@ bot.cellar.title=Cellar digger
 bot.cellar.desc=You need to have a pickaxe in your belt. Build a cellar, run the bot, wait until the end.
 
 bot.htable.title=Build Herbalist Tables
-bot.htable.desc=Builds Herbalist Tables automatically. Select build area → select resources areas. Green preview shows exact placement.
+bot.htable.desc=Builds Herbalist Tables automatically. Select build area в†’ select resources areas. Green preview shows exact placement.
 
 bot.kiln.title=Kilns builder
 bot.kiln.desc=Bot will build kilns. Follow the popups.
@@ -370,7 +370,7 @@ bot.lchest.title=Build Large Chest
 bot.lchest.desc=This bot builds large chests automatically. You will be asked to select build area and ingredient areas during bot start. Required materials: 5 boards, 2 metal bars (bronze/cast iron/wrought iron), 4 leather, 2 rope, and 3 bone glue. The bot will continuously build large chests in the selected area until resources run out.
 
 bot.moundbed.title=Build Mound Beds
-bot.moundbed.desc=Builds Mound Beds automatically. Select build area → select resources areas. Green preview shows exact placement.
+bot.moundbed.desc=Builds Mound Beds automatically. Select build area в†’ select resources areas. Green preview shows exact placement.
 
 bot.smoke_shed.title=Smoke sheds builder
 bot.smoke_shed.desc=Bot will build smoke sheds. Follow the popups.
@@ -382,7 +382,7 @@ bot.tarkilnb.title=Tar Kilns builder
 bot.tarkilnb.desc=Bot will build tar kilns. Follow the popups.
 
 bot.trellis.title=Build Trellis
-bot.trellis.desc=Builds trellises automatically (3 per tile). Select build area → choose orientation (6 options: edge-packed or centered) → select resources areas. Green preview shows exact placement.
+bot.trellis.desc=Builds trellises automatically (3 per tile). Select build area в†’ choose orientation (6 options: edge-packed or centered) в†’ select resources areas. Green preview shows exact placement.
 
 bot.ttub.title=Tanning tube builder
 bot.ttub.desc=Bot will build tanning tubes. Follow the popups.
@@ -722,7 +722,7 @@ overlay.section.thresholds=Quality Thresholds
 overlay.use_thresholds=Use color thresholds
 overlay.default_color=Default color:
 overlay.thresholds_list=Thresholds (Q >= value):
-overlay.prefix=Prefix (×5)
+overlay.prefix=Prefix (Г—5)
 overlay.hide=Hide overlay
 overlay.time_format=Time format:
 overlay.time_ratio=Time ratio:
@@ -1765,9 +1765,9 @@ enc.routes.create1=Click the **green plus** at the top right of the Routes UI. A
 enc.routes.create2=Right-click the route to rename it if desired.
 enc.routes.create3=Think of two areas in your village you would like to be connected. A good example could be going from `Outside` to `L3` or from `Outside` to the second floor of your `Stonestead` where your bed is.
 enc.routes.create4=Click the **red dot** to begin recording.
-enc.routes.create5=Travel to your destination. Your character will pause periodically to calculate route points—input is temporarily disabled until a **white dot** appears under your character. Continue walking normally, passing through doors, ladders, or mineholes as needed; the system automatically handles these.
+enc.routes.create5=Travel to your destination. Your character will pause periodically to calculate route pointsвЂ”input is temporarily disabled until a **white dot** appears under your character. Continue walking normally, passing through doors, ladders, or mineholes as needed; the system automatically handles these.
 enc.routes.create6=Press the **red dot** again to stop recording once you reach your destination.
-enc.routes.first_complete=Your first route is now complete. Test it by clicking a route point in the **Route Info** panel—the character should navigate to the selected point.
+enc.routes.first_complete=Your first route is now complete. Test it by clicking a route point in the **Route Info** panelвЂ”the character should navigate to the selected point.
 enc.routes.network_note=As more routes are recorded, nearby points from different routes will automatically connect, creating a **network** that allows bots to find new paths across your village.
 enc.routes.example_title=Example Usage
 enc.routes.example_intro=Suppose your inventory is full after looting:
