tooltips for new icons

--- a/src/lang/messages.properties
+++ b/src/lang/messages.properties
@@ -114,6 +114,9 @@ bot.dryedfish.desc=Dries fish on drying frames. Required zones: Drying Frames (s
 bot.filwater.title=Fills waterskins
 bot.filwater.desc=You need an area with 'water' spec set up. Refills waterskins from your belt. You need to have filled cistern or a barrel in chosen area.
 
+bot.filwaterzone.title=Fill Waterskins (Global Zone)
+bot.filwaterzone.desc=Fills waterskins using global water zone with chunk navigation. Requires area with 'water' specialization.
+
 bot.fineryforge.title=Forging
 bot.fineryforge.desc=This bot processes cast iron bars into wrought iron using finery forges. You need areas with 'fforge' specialization for forges, 'fuel(coal)' specialization for coal, and 'anvil' specialization for anvil. You also need an IN area for 'Bar of Cast Iron'. The bot will fill forges, add coal fuel, light them, forge wrought iron on anvil, and drop dross automatically.
 
@@ -421,6 +424,9 @@ bot.bed.desc=This bot finds and uses a free bed for sleeping. You need an area w
 bot.lift.title=Carrier
 bot.lift.desc=The bot transfers liftable objects by pattern from one selected area to another. No horse, only by foot.
 
+bot.liftzone.title=Transfer Liftable (Global Zone)
+bot.liftzone.desc=Transfers liftable objects using global zones with chunk navigation. Moves items from source zone to destination zone.
+
 bot.loading.title=Load cart or vehicle
 bot.loading.desc=The bot load cart or vehicle from selected area. No horse, only by foot.
 
@@ -441,6 +447,9 @@ bot.swap.desc=The bot load cart or vehicle from another cart or vehicle. No hors
 
 bot.swillcollector.title=Swill Collector
 bot.swillcollector.desc=Collects items from containers/stockpiles in a selected area and drops them into to the closest "trough" in a "trough area".
+
+bot.swillzone.title=Swill To Trough
+bot.swillzone.desc=Collects swill from selected area and drops it into the nearest trough. Click to select the trough location.
 
 bot.travellerssack.title=Equip Traveller's Sacks
 bot.travellerssack.desc=This bot attempts to equip up to two Traveller's Sacks from the belt.
