--- a/src/lang/messages.properties
+++ b/src/lang/messages.properties
@@ -1534,6 +1534,20 @@ cookbook.btn_import=Import
 cookbook.add_to_favorites=Add to Favorites
 cookbook.remove_from_favorites=Remove from Favorites
 
+# === STORAGE ITEMS ===
+storage.window_title=Storage Items
+storage.search=Search:
+storage.refresh=Refresh
+storage.col_name=Name
+storage.col_quality=Quality
+storage.col_count=Count
+storage.quality=Quality
+storage.count=Count
+storage.total_items=Total: {0} items
+storage.db_not_ready=Database is not ready
+storage.grouping_tip=Grouping mode: Type, Quality, Q5/Q10 ranges
+storage.quality_filter_tip=Min quality filter (e.g. 10)
+
 # === ENCYCLOPEDIA ===
 encyclopedia.title=Encyclopedia
 
