--- a/src/lang/messages_ru.properties
+++ b/src/lang/messages_ru.properties
@@ -1531,6 +1531,20 @@ cookbook.btn_import=Импорт
 cookbook.add_to_favorites=Добавить в избранное
 cookbook.remove_from_favorites=Удалить из избранного
 
+# === ХРАНИЛИЩЕ ПРЕДМЕТОВ ===
+storage.window_title=Хранилище предметов
+storage.search=Поиск:
+storage.refresh=Обновить
+storage.col_name=Название
+storage.col_quality=Качество
+storage.col_count=Кол-во
+storage.quality=Качество
+storage.count=Количество
+storage.total_items=Всего: {0} предметов
+storage.db_not_ready=База данных не готова
+storage.grouping_tip=Режим группировки: Тип, Качество, Q5/Q10 диапазоны
+storage.quality_filter_tip=Мин. качество (напр. 10)
+
 # === ЭНЦИКЛОПЕДИЯ ===
 encyclopedia.title=Энциклопедия
 
