--- a/src/lang/messages_ru.properties
+++ b/src/lang/messages_ru.properties
@@ -1544,6 +1544,13 @@ storage.total_items=Всего: {0} предметов
 storage.db_not_ready=База данных не готова
 storage.grouping_tip=Режим группировки: Тип, Качество, Q5/Q10 диапазоны
 storage.quality_filter_tip=Мин. качество (напр. 10)
+storage.menu_take=Взять
+storage.select_quantity=Выберите количество
+storage.fetching_items=Сбор {0} предметов...
+storage.no_containers=Контейнеры с этим предметом не найдены
+storage.container_not_found=Контейнер недоступен
+storage.fetch_complete=Собрано {0} предметов
+storage.fetch_cancelled=Сбор отменён
 
 # === ЭНЦИКЛОПЕДИЯ ===
 encyclopedia.title=Энциклопедия
