--- a/src/lang/messages.properties
+++ b/src/lang/messages.properties
@@ -1547,6 +1547,13 @@ storage.total_items=Total: {0} items
 storage.db_not_ready=Database is not ready
 storage.grouping_tip=Grouping mode: Type, Quality, Q5/Q10 ranges
 storage.quality_filter_tip=Min quality filter (e.g. 10)
+storage.menu_take=Take
+storage.select_quantity=Select quantity
+storage.fetching_items=Fetching {0} items...
+storage.no_containers=No containers found for this item
+storage.container_not_found=Container not accessible
+storage.fetch_complete=Fetched {0} items
+storage.fetch_cancelled=Fetch cancelled
 
 # === ENCYCLOPEDIA ===
 encyclopedia.title=Encyclopedia
