--- a/src/lang/messages.properties
+++ b/src/lang/messages.properties
@@ -485,6 +485,9 @@ bot.clay_cheker.desc=Checks clay, soil or sand underneath you. Uses shovel from 
 bot.combatdist.title=Combat Distance Tool
 bot.combatdist.desc=Manage combat kiting distance
 
+bot.gelatin.title=Gelatin Maker
+bot.gelatin.desc=Crafts gelatin from prepared hides using a cauldron. Collects hides from 'readyHides' area, prepares cauldron (fuel, water, fire), crafts gelatin, and stores the result.
+
 # === AREAS WIDGET ===
 area.title=Areas Settings
 area.btn.create_folder=Create new folder
