--- a/src/lang/messages_ru.properties
+++ b/src/lang/messages_ru.properties
@@ -482,6 +482,9 @@ bot.clay_cheker.desc=Проверяет глину, почву или песок
 bot.combatdist.title=Инструмент боевой дистанции
 bot.combatdist.desc=Управление дистанцией кайтинга в бою.
 
+bot.gelatin.title=Крафт желатина
+bot.gelatin.desc=Крафтит желатин из готовых шкур в котле. Собирает шкуры из зоны 'readyHides', подготавливает котёл (топливо, вода, огонь), крафтит желатин и складывает результат.
+
 # === ВИДЖЕТ ОБЛАСТЕЙ ===
 area.title=Настройки областей
 area.btn.create_folder=Создать папку
